# MiService

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  miauth.py  micli.py  micom.py  miiocmd.py  miiocom.py  minacom.py  miservice.py  publish.sh  pyproject.toml  setup.py
miservice/: __init__.py  __main__.py  biohttp.py  cli.py  miaccount.py  mibaseservice.py  micli.py  miiocommand.py  miioservice.py  minaservice.py
tests/: conftest.py  test_setup_validation.py
